# Chou

./: .gitignore  LICENSE  README.md  README_CN.md  _check_import.py  _check_ocr.py  _debug_pdf.py  nul  pyproject.toml  rename_log.txt  rename_papers.py  rename_results.csv  requirements.txt  test_new_features.py  test_rename.py  upload_pypi.bat  upload_pypi.sh
chou/: __init__.py  __version__.py  api.py  tools.py
chou/cli/: __init__.py  main.py
chou/core/: __init__.py  author_parser.py  extractor.py  filename_gen.py  models.py  ocr_extractor.py  processor.py  year_parser.py
chou/gui/: __init__.py  main.py  main_window.py
chou/gui/models/: __init__.py  paper_model.py
chou/gui/widgets/: __init__.py  drop_zone.py  preview_table.py
chou/utils/: __init__.py  chinese_utils.py  constants.py
images/: chou_help.txt
tests/: __init__.py  conftest.py  test_author_parser.py  test_chinese_utils.py  test_filename_gen.py  test_ocr_extractor.py  test_processor.py  test_unified_api.py  test_year_parser.py
